# icmp-c2

./: Cargo.toml  README.md  listener.py
.cargo/: config.toml
src/: c2.rs  main.rs  main_old.rs  winsock.rs
