[package]
name = "icmp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
etherparse = "0.17.0"
serde_json = "1.0.140"
windows = { version = "0.61.1", features = ["Win32_Networking_WinSock", "Win32_System_Threading"] }

[profile.dev]
strip = "symbols"

[profile.release]
strip = "symbols"